; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_tx_rx.c_bna_tx_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_tx_rx.c_bna_tx_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bna_tx = type { i32, %struct.TYPE_2__*, i32*, i32 }
%struct.TYPE_2__ = type { i32 }

@bna_tx_mod_cb_tx_stopped = common dso_local global i32 0, align 4
@BNA_TX_F_ENET_STARTED = common dso_local global i32 0, align 4
@TX_E_STOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bna_tx*)* @bna_tx_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bna_tx_stop(%struct.bna_tx* %0) #0 {
  %2 = alloca %struct.bna_tx*, align 8
  store %struct.bna_tx* %0, %struct.bna_tx** %2, align 8
  %3 = load i32, i32* @bna_tx_mod_cb_tx_stopped, align 4
  %4 = load %struct.bna_tx*, %struct.bna_tx** %2, align 8
  %5 = getelementptr inbounds %struct.bna_tx, %struct.bna_tx* %4, i32 0, i32 3
  store i32 %3, i32* %5, align 8
  %6 = load %struct.bna_tx*, %struct.bna_tx** %2, align 8
  %7 = getelementptr inbounds %struct.bna_tx, %struct.bna_tx* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.bna_tx*, %struct.bna_tx** %2, align 8
  %11 = getelementptr inbounds %struct.bna_tx, %struct.bna_tx* %10, i32 0, i32 2
  store i32* %9, i32** %11, align 8
  %12 = load i32, i32* @BNA_TX_F_ENET_STARTED, align 4
  %13 = xor i32 %12, -1
  %14 = load %struct.bna_tx*, %struct.bna_tx** %2, align 8
  %15 = getelementptr inbounds %struct.bna_tx, %struct.bna_tx* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = and i32 %16, %13
  store i32 %17, i32* %15, align 8
  %18 = load %struct.bna_tx*, %struct.bna_tx** %2, align 8
  %19 = load i32, i32* @TX_E_STOP, align 4
  %20 = call i32 @bfa_fsm_send_event(%struct.bna_tx* %18, i32 %19)
  ret void
}

declare dso_local i32 @bfa_fsm_send_event(%struct.bna_tx*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
